--- a/_publications/2022-ep-qa.md
+++ b/_publications/2022-ep-qa.md
@@ -3,7 +3,7 @@ title: "Can Edge Probing Tasks Reveal Linguistic Knowledge in QA Models?"
 collection: publications
 permalink: /publication/2021-ep-qa
 date: 2022-1-1
-venue: 'COLING 2022'
+venue: 'COLING'
 paperurl: 'https://arxiv.org/pdf/2109.07102.pdf'
 ---
 edge probing, diagonastic classifiers, QA
